; httpr-ocurl                                -*- dune -*-
; dune
; Keith Waclena <https://www.lib.uchicago.edu/keith/>

(library
 (name httpr_cohttp_lwt)
 (libraries httpr_intf prelude versioj lwt cohttp cohttp-lwt cohttp-lwt-unix uri tls)
 (inline_tests (backend qtest.lib)))

(rule
 (targets v.ml)
 (mode promote-until-clean)             ; copies v.ml from _build to the source tree, clean deletes
 (action (system "versioj %{targets} || echo 'let data = []' > %{targets}")))

(env
  (dev                                  ; make warnings non-fatal
    (flags (:standard -warn-error -A))))
